--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,6 +8,12 @@
     padding-top: 0px;
     padding-bottom: 0px;
 }
+.general-info{
+  box-shadow: 0px 0px 24px 4px rgba(0, 25, 53, 0.04);
+    border: 1px solid #eee;
+    padding: 20px;
+    
+}
 body {
   /*font-family: "Roboto", sans-serif;*/
   font-family: Roboto, sans-serif;
@@ -4804,7 +4810,10 @@ iframe {
 
 .form-row .custom-control.custom-checkbox label {
   cursor: pointer; }
-
+  .blog-sidebar .widget .social ul li{
+    background: #f0f2f5;
+    border: 1px solid #e9e9e9 !important;
+  }
 /* Subscribe & Follow */
 .blog-sidebar .widget .social ul li {
   padding: 10px;
@@ -4817,12 +4826,16 @@ iframe {
       -ms-flex-align: center;
           align-items: center; }
   .blog-sidebar .widget .social ul li .follow {
-    background: #f6f6f6;
-    padding: 3px 18px;
-    font-size: 12px; }
-  .blog-sidebar .widget .social ul li a {
+    border-radius: 3px;
+    background: #ccc;
+    padding: 3px 10px;
     font-size: 12px;
-    font-weight: 600; }
+    color: #fff;
+  }
+  .blog-sidebar .widget .social ul li a {
+    color: #333;
+    font-size: 14px;
+    font-weight: normal !important; }
     .blog-sidebar .widget .social ul li a i {
       width: 15px; }
 
