--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,6 +14,10 @@
     padding: 20px;
     
 }
+.bank-intro img{
+    width: 100% !important;
+    height: auto !important;
+}
 body {
   /*font-family: "Roboto", sans-serif;*/
   font-family: Roboto, sans-serif;
