--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,6 +8,9 @@
     padding-top: 0px;
     padding-bottom: 0px;
 }
+.list-info li.bg-success{
+  background: #fff !important;
+}
 .general-info{
   box-shadow: 0px 0px 24px 4px rgba(0, 25, 53, 0.04);
     border: 1px solid #eee;
@@ -3502,7 +3505,7 @@ iframe {
 .job-list .job-list-details {
   overflow: hidden; }
   .job-list .job-list-details h5 {
-    white-space: nowrap;
+    /* white-space: nowrap; */
     overflow: hidden;
     text-overflow: ellipsis; }
 
