--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,6 +8,24 @@
     padding-top: 0px;
     padding-bottom: 0px;
 }
+.sub-menu{
+  max-height: 400px;
+  overflow: auto;
+  overflow-x: hidden;
+}
+.sub-menu::-webkit-scrollbar{
+	width: 5px;
+}
+.sub-menu::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+.sub-menu::-webkit-scrollbar-thumb {
+  background: #ccc; 
+}
+.sub-menu::-webkit-scrollbar-thumb:hover {
+  background: #727272; 
+}
+
 .list-info li.bg-success{
   background: #fff !important;
 }
